# table-gen

./: .gitignore  README.md  bruv.html  experiment.json  experiment_gdrive_added.json  gdrive_file_ids.json  generate_thumbnails.py  index.html  main.py  pyproject.toml  run_all.sh  shootout_table.tex
scripts/: convert_290.py  convert_290_335.py  convert_gdrive_file_ids.py  gdrive_file_ids.json  generate_thumbnails.py  token.json  upload_images.py
