[tool.poetry]
name = "table-gen"
version = "0.1.0"
description = ""
authors = ["eddie <eddie.zhang@plato.systems>"]

[tool.poetry.dependencies]
python = "^3.6"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
